--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,15 @@
     <title>EmberChat</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
+    </script>
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
@@ -19,6 +27,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-chat.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     {{content-for "body-footer"}}
   </body>
